--- a/users/templates/users/admin_dashboard.html
+++ b/users/templates/users/admin_dashboard.html
@@ -322,6 +322,9 @@
 
         <!--Button to see user reviews -->
         <a href="{% url 'admin_reviews' %}" class="action-button">Reviews</a>
+
+        <!--Button to see specific chatbot messages -->
+        <a href="{% url 'chatbot_messages' %}" class="action-button">Chatbot Messages</a>
     </div>
 
 
