--- a/users/templates/users/user_profile_edit.html
+++ b/users/templates/users/user_profile_edit.html
@@ -23,7 +23,7 @@
 
             <div class="text-center">
                 <button type="submit" class="btn btn-primary">Save Changes</button>
-                <a href="{% url 'user_dashboard' %}" class="btn btn-secondary">Cancel</a>
+                <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
             </div>
         </form>
     </div>
