--- a/bookings/templates/bookings/user_payment_review.html
+++ b/bookings/templates/bookings/user_payment_review.html
@@ -39,7 +39,7 @@
             </div>
             <div class="text-center">
                 <button type="submit" class="btn btn-success">Pay Now</button>
-                <a href="{% url 'user_dashboard' %}" class="btn btn-secondary">Cancel</a>
+                <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
             </div>
         </form>
     </div>
